--- a/my app/app/src/main/res/values/strings.xml
+++ b/my app/app/src/main/res/values/strings.xml
@@ -25,7 +25,8 @@
     <string name="title_activity_display_message2">DisplayMessageActivity2</string>
     <string name="title_activity_home">Home</string>
     <string name="title_activity_userdash">userdash</string>
-<<<<<<< HEAD
+    <string name="title_activity_maps">Map</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
